[package]
name = "chronok"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
chrono = "0.4.31"
toml = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0.4"
clap = "4.4.10"
